--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "startupbackend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +22,7 @@
     "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "socket.io": "^4.8.1"
   }
 }
